# FLP-GSP

./: Cargo.toml  LICENSE.MIT  README.md
src/: ast.rs  gsp.lalrpop  interpreter.rs  lexer.rs  lib.rs  parser.rs
src/interpreter/: evaluate.rs  hasura.rs  mysql.rs  postgres.rs  sqlite.rs
src/parser/: atom.rs  comparison.rs  relation.rs
tests/: common.rs  evaluate.rs  hasura.rs  mysql.rs  postgres.rs  sqlite.rs
