[package]
name = "flp-gsp"
version = "0.3.0"
authors = ["Hakukano <flp.hakukano@gmail.com>"]
edition = "2018"
description = "General search parser"
repository = "https://github.com/Hakukano/FLP-GSP"
documentation = "https://docs.rs/flp-gsp"
homepage = "https://flp-gsp.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plex = "0.2"

bigdecimal = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }
ipnetwork = { version = "0.18", optional = true }
json = { version = "0.12", optional = true }
regex = { version = "1.4", optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "0.8", optional = true }
wildmatch = { version = "1.0", optional = true }

[features]
default = []
evaluate = ["regex", "wildmatch"]
mysql = ["bigdecimal", "chrono", "json"]
postgres = ["chrono", "ipnetwork", "serde_json", "uuid"]
