[package]
name = "flp-gsp"
version = "0.3.6"
authors = ["Hakukano <flp.hakukano@gmail.com>"]
edition = "2018"
description = "General search parser"
repository = "https://github.com/Hakukano/FLP-GSP"
documentation = "https://docs.rs/flp-gsp"
homepage = "https://flp-gsp.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
bit-vec = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }
ipnetwork = { version = "0.18", optional = true }
lalrpop-util = "0.19"
regex = "1.5"
rust_decimal = { version = "1.14", optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "0.8", optional = true }
wildmatch = { version = "1.0", optional = true }

[features]
default = []
evaluate = ["wildmatch"]
mysql = ["chrono", "rust_decimal", "serde_json"]
postgres = ["bit-vec", "chrono", "ipnetwork", "rust_decimal", "serde_json", "uuid"]
sqlite = ["chrono", "uuid"]
