[package]
name = "flp-gsp"
version = "1.0.1"
authors = ["Hakukano <flp.hakukano@gmail.com>"]
edition = "2021"
description = "General search parser"
repository = "https://github.com/Hakukano/FLP-GSP"
documentation = "https://docs.rs/flp-gsp"
homepage = "https://flp-gsp.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }
ipnetwork = { version = "0.20", optional = true }
nom = "7.1"
regex = "1.6"
rust_decimal = { version = "1.26", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
uuid = { version = "1.1", optional = true }
wildmatch = { version = "2.1", optional = true }

[features]
default = []
evaluate = ["wildmatch"]
mysql = ["chrono", "rust_decimal", "serde_json"]
postgres = ["bit-vec", "chrono", "ipnetwork", "rust_decimal", "serde_json", "uuid"]
sqlite = ["chrono", "uuid"]
hasura = []
